--- a/barcode.info.yml
+++ b/barcode.info.yml
@@ -1,7 +1,7 @@
 name: Barcode
 type: module
 description: 'Provides a barcode field type.'
-package: Field Types
+package: Field types
 core: 8.x
 dependencies:
 - field
